v1.0.0/modules/schema/pages/class/GovGAST3.adoc
= `GovGAST3`
:toclevels: 4


+++Generic turbogas with acceleration and temperature controller.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovGAST3`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovGAST3`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
GovGAST3 {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



































AsynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TurbineLoadControllerDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



SynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




















GovGAST3 -> AsynchronousMachineDynamics: AsynchronousMachineDynamics


GovGAST3 -> TurbineLoadControllerDynamics: TurbineLoadControllerDynamics


GovGAST3 -> SynchronousMachineDynamics: SynchronousMachineDynamics


GovGAST3 -> DiagramObject: DiagramObjects


GovGAST3 -> InstanceSet: InstanceSet


GovGAST3 -> Name: Names


GovGAST3 -> ChangeSetMember: PropertiesCIMDataObject


GovGAST3 -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<bca,`bca`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Acceleration limit set-point (<i>Bca</i>).  Unit = 1/s.  Typical value = 0,01.+++

| <<bp,`bp`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Droop (<i>bp</i>).  Typical value = 0,05.+++

| <<dtc,`dtc`>>
| 0..1
| xref::class/Temperature.adoc[`Temperature`]
| +++Exhaust temperature variation due to fuel flow increasing from 0 to 1 PU (<i>deltaTc</i>).  Typical value = 390.+++

| <<ka,`ka`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum fuel flow (<i>Ka</i>).  Typical value = 0,23.+++

| <<kac,`kac`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Fuel system feedback (<i>K</i><i><sub>AC</sub></i>).  Typical value = 0.+++

| <<kca,`kca`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Acceleration control integral gain (<i>Kca</i>). Unit = 1/s.  Typical value = 100.+++

| <<ksi,`ksi`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Gain of radiation shield (<i>Ksi</i>).  Typical value = 0,8.+++

| <<ky,`ky`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Coefficient of transfer function of fuel valve positioner (<i>Ky</i>).  Typical value = 1.+++

| <<mnef,`mnef`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Fuel flow maximum negative error value (<i>MNef</i>).  Typical value = -0,05.+++

| <<mxef,`mxef`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Fuel flow maximum positive error value (<i>MXef</i>).  Typical value = 0,05.+++

| <<rcmn,`rcmn`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum fuel flow (<i>RCMN</i>).  Typical value = -0,1.+++

| <<rcmx,`rcmx`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum fuel flow (<i>RCMX</i>).  Typical value = 1.+++

| <<tac,`tac`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Fuel control time constant (<i>Tac</i>) (&gt;= 0).  Typical value = 0,1.+++

| <<tc,`tc`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Compressor discharge volume time constant (<i>Tc</i>) (&gt;= 0).  Typical value = 0,2.+++

| <<td,`td`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Temperature controller derivative gain (<i>Td</i>) (&gt;= 0).  Typical value = 3,3.+++

| <<tfen,`tfen`>>
| 0..1
| xref::class/Temperature.adoc[`Temperature`]
| +++Turbine rated exhaust temperature correspondent to Pm=1 PU (<i>Tfen</i>).  Typical value = 540.+++

| <<tg,`tg`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of speed governor (<i>Tg</i>) (&gt;= 0).  Typical value = 0,05.+++

| <<tsi,`tsi`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of radiation shield (<i>Tsi</i>) (&gt;= 0).  Typical value = 15.+++

| <<tt,`tt`>>
| 0..1
| xref::class/Temperature.adoc[`Temperature`]
| +++Temperature controller integration rate (<i>Tt</i>).  Typical value = 250.+++

| <<ttc,`ttc`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of thermocouple (<i>Ttc</i>) (&gt;= 0).  Typical value = 2,5.+++

| <<ty,`ty`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of fuel valve positioner (<i>Ty</i>) (&gt;= 0).  Typical value = 0,2.+++

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#bca]
=== `bca`
+++Acceleration limit set-point (<i>Bca</i>).  Unit = 1/s.  Typical value = 0,01.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.bca`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#bp]
=== `bp`
+++Droop (<i>bp</i>).  Typical value = 0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.bp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#dtc]
=== `dtc`
+++Exhaust temperature variation due to fuel flow increasing from 0 to 1 PU (<i>deltaTc</i>).  Typical value = 390.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.dtc`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ka]
=== `ka`
+++Minimum fuel flow (<i>Ka</i>).  Typical value = 0,23.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.ka`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kac]
=== `kac`
+++Fuel system feedback (<i>K</i><i><sub>AC</sub></i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.kac`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#kca]
=== `kca`
+++Acceleration control integral gain (<i>Kca</i>). Unit = 1/s.  Typical value = 100.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.kca`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#ksi]
=== `ksi`
+++Gain of radiation shield (<i>Ksi</i>).  Typical value = 0,8.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.ksi`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#ky]
=== `ky`
+++Coefficient of transfer function of fuel valve positioner (<i>Ky</i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.ky`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#mnef]
=== `mnef`
+++Fuel flow maximum negative error value (<i>MNef</i>).  Typical value = -0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.mnef`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mxef]
=== `mxef`
+++Fuel flow maximum positive error value (<i>MXef</i>).  Typical value = 0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.mxef`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#rcmn]
=== `rcmn`
+++Minimum fuel flow (<i>RCMN</i>).  Typical value = -0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.rcmn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#rcmx]
=== `rcmx`
+++Maximum fuel flow (<i>RCMX</i>).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.rcmx`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#tac]
=== `tac`
+++Fuel control time constant (<i>Tac</i>) (&gt;= 0).  Typical value = 0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.tac`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tc]
=== `tc`
+++Compressor discharge volume time constant (<i>Tc</i>) (&gt;= 0).  Typical value = 0,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.tc`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#td]
=== `td`
+++Temperature controller derivative gain (<i>Td</i>) (&gt;= 0).  Typical value = 3,3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.td`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tfen]
=== `tfen`
+++Turbine rated exhaust temperature correspondent to Pm=1 PU (<i>Tfen</i>).  Typical value = 540.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.tfen`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]


|===

//[discrete]
[#tg]
=== `tg`
+++Time constant of speed governor (<i>Tg</i>) (&gt;= 0).  Typical value = 0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.tg`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tsi]
=== `tsi`
+++Time constant of radiation shield (<i>Tsi</i>) (&gt;= 0).  Typical value = 15.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.tsi`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tt]
=== `tt`
+++Temperature controller integration rate (<i>Tt</i>).  Typical value = 250.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.tt`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]


|===

//[discrete]
[#ttc]
=== `ttc`
+++Time constant of thermocouple (<i>Ttc</i>) (&gt;= 0).  Typical value = 2,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.ttc`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#ty]
=== `ty`
+++Time constant of fuel valve positioner (<i>Ty</i>) (&gt;= 0).  Typical value = 0,2.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST3.ty`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===


